wallet_core/error_category/error_category_derive/tests/derive_error_category/fail_on_invalid_defer_2.stderr
error: expected a field to defer into, found none
 --> tests/derive_error_category/fail_on_invalid_defer_2.rs:6:5
  |
6 |     SingleStruct {},
  |     ^^^^^^^^^^^^
